// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VIS-001: InteriorPreview SHELVES zone renders SHELVES zone with shelf lines 1`] = `
<div
  class="border rounded-lg bg-muted/10 p-3 flex flex-col h-full"
  data-testid="interior-preview"
>
  <div
    class="flex items-center justify-center gap-2 mb-2 pb-2 border-b border-dashed"
  >
    <span
      class="text-[10px] text-muted-foreground"
    >
      Szer:
    </span>
    <span
      class="text-xs font-mono font-semibold"
    >
      600
      mm
    </span>
    <span
      class="text-muted-foreground/30"
    >
      |
    </span>
    <span
      class="text-[10px] text-muted-foreground"
    >
      Wys:
    </span>
    <span
      class="text-xs font-mono font-semibold"
    >
      720
      mm
    </span>
  </div>
  <div
    class="flex-1 flex justify-center items-center gap-3 py-2 min-h-0"
  >
    <div
      class="border-4 border-muted-foreground/40 rounded-md bg-background p-1 flex flex-col-reverse gap-0.5 shadow-inner"
      style="min-height: 280px; max-width: 100%;"
    >
      <div
        class="relative rounded transition-all cursor-pointer overflow-hidden flex flex-col border border-blue-300 dark:border-blue-700 hover:border-primary/40 bg-blue-50/50 dark:bg-blue-950/20"
        data-testid="zone-shelves-zone"
        style="flex: 1;"
      >
        <div
          class="absolute inset-1 pointer-events-none"
        >
          <div
            class="absolute left-0 h-0.5 bg-blue-400/80 rounded-full w-full"
            style="bottom: 0%;"
          />
          <div
            class="absolute left-0 h-0.5 bg-blue-400/80 rounded-full w-full"
            style="bottom: 33.33333333333333%;"
          />
          <div
            class="absolute left-0 h-0.5 bg-blue-400/80 rounded-full w-full"
            style="bottom: 66.66666666666666%;"
          />
        </div>
        <div
          class="absolute inset-0 flex items-center justify-center pointer-events-none"
        >
          <div
            class="text-center px-1 py-0.5 rounded bg-background/70"
          >
            <div
              class="text-[9px] font-medium text-blue-600 dark:text-blue-400"
            >
              Półki
            </div>
            <div
              class="text-[8px] text-muted-foreground"
            >
              3
              ×
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col-reverse gap-0.5"
      style="min-height: 280px;"
    >
      <div
        class="flex items-center gap-1"
        style="flex: 1;"
      >
        <div
          class="w-2 h-full flex flex-col"
        >
          <div
            class="w-full h-px bg-muted-foreground/50"
          />
          <div
            class="flex-1 border-l border-muted-foreground/50 ml-0"
          />
          <div
            class="w-full h-px bg-muted-foreground/50"
          />
        </div>
        <div
          class="flex flex-col items-start gap-0.5"
        >
          <span
            class="text-[10px] font-mono whitespace-nowrap text-muted-foreground"
          >
            684
            mm
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="text-center mt-2 pt-2 border-t border-dashed"
  >
    <div
      class="text-[10px] text-muted-foreground"
    >
      Wnętrze: 
      564
      ×
      684
      mm
    </div>
  </div>
</div>
`;

exports[`VIS-002: InteriorPreview DRAWERS zone renders DRAWERS zone with drawer boxes 1`] = `
<div
  class="border rounded-lg bg-muted/10 p-3 flex flex-col h-full"
  data-testid="interior-preview"
>
  <div
    class="flex items-center justify-center gap-2 mb-2 pb-2 border-b border-dashed"
  >
    <span
      class="text-[10px] text-muted-foreground"
    >
      Szer:
    </span>
    <span
      class="text-xs font-mono font-semibold"
    >
      600
      mm
    </span>
    <span
      class="text-muted-foreground/30"
    >
      |
    </span>
    <span
      class="text-[10px] text-muted-foreground"
    >
      Wys:
    </span>
    <span
      class="text-xs font-mono font-semibold"
    >
      720
      mm
    </span>
  </div>
  <div
    class="flex-1 flex justify-center items-center gap-3 py-2 min-h-0"
  >
    <div
      class="border-4 border-muted-foreground/40 rounded-md bg-background p-1 flex flex-col-reverse gap-0.5 shadow-inner"
      style="min-height: 280px; max-width: 100%;"
    >
      <div
        class="relative rounded transition-all cursor-pointer overflow-hidden flex flex-col border border-amber-300 dark:border-amber-700 hover:border-primary/40 bg-amber-50/50 dark:bg-amber-950/20"
        data-testid="zone-drawers-zone"
        style="flex: 1;"
      >
        <div
          class="absolute inset-1 pointer-events-none flex flex-col-reverse gap-px"
        >
          <div
            class="rounded-sm border relative overflow-hidden border-amber-400/80 bg-amber-50/30 dark:bg-amber-900/20"
            style="flex: 1;"
          >
            <div
              class="absolute left-0.5 right-0.5 bottom-0.5 flex flex-col-reverse"
              style="height: 90%;"
            >
              <div
                class="flex-1 border-t first:border-t-0 border-amber-300/60"
              />
            </div>
            <div
              class="absolute inset-0 flex items-center justify-center"
            >
              <span
                class="text-[6px] font-medium px-0.5 bg-background/60 rounded text-amber-700 dark:text-amber-300"
              >
                F
              </span>
            </div>
          </div>
          <div
            class="rounded-sm border relative overflow-hidden border-amber-400/80 bg-amber-50/30 dark:bg-amber-900/20"
            style="flex: 1;"
          >
            <div
              class="absolute left-0.5 right-0.5 bottom-0.5 flex flex-col-reverse"
              style="height: 90%;"
            >
              <div
                class="flex-1 border-t first:border-t-0 border-amber-300/60"
              />
            </div>
            <div
              class="absolute inset-0 flex items-center justify-center"
            >
              <span
                class="text-[6px] font-medium px-0.5 bg-background/60 rounded text-amber-700 dark:text-amber-300"
              >
                F
              </span>
            </div>
          </div>
          <div
            class="rounded-sm border relative overflow-hidden border-amber-400/80 bg-amber-50/30 dark:bg-amber-900/20"
            style="flex: 1;"
          >
            <div
              class="absolute left-0.5 right-0.5 bottom-0.5 flex flex-col-reverse"
              style="height: 90%;"
            >
              <div
                class="flex-1 border-t first:border-t-0 border-amber-300/60"
              />
            </div>
            <div
              class="absolute inset-0 flex items-center justify-center"
            >
              <span
                class="text-[6px] font-medium px-0.5 bg-background/60 rounded text-amber-700 dark:text-amber-300"
              >
                F
              </span>
            </div>
          </div>
        </div>
        <div
          class="absolute inset-0 flex items-center justify-center pointer-events-none"
        >
          <div
            class="text-center px-1 py-0.5 rounded bg-background/70"
          >
            <div
              class="text-[9px] font-medium text-amber-600 dark:text-amber-400"
            >
              Szuflady
            </div>
            <div
              class="text-[8px] text-muted-foreground"
            >
              3
              F/
              3
              B
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col-reverse gap-0.5"
      style="min-height: 280px;"
    >
      <div
        class="flex items-center gap-1"
        style="flex: 1;"
      >
        <div
          class="w-2 h-full flex flex-col"
        >
          <div
            class="w-full h-px bg-muted-foreground/50"
          />
          <div
            class="flex-1 border-l border-muted-foreground/50 ml-0"
          />
          <div
            class="w-full h-px bg-muted-foreground/50"
          />
        </div>
        <div
          class="flex flex-col items-start gap-0.5"
        >
          <span
            class="text-[10px] font-mono whitespace-nowrap text-muted-foreground"
          >
            684
            mm
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="text-center mt-2 pt-2 border-t border-dashed"
  >
    <div
      class="text-[10px] text-muted-foreground"
    >
      Wnętrze: 
      564
      ×
      684
      mm
    </div>
  </div>
</div>
`;

exports[`VIS-003: InteriorPreview NESTED 2x2 renders NESTED 2x2 structure with all cells 1`] = `
<div
  class="border rounded-lg bg-muted/10 p-3 flex flex-col h-full"
  data-testid="interior-preview"
>
  <div
    class="flex items-center justify-center gap-2 mb-2 pb-2 border-b border-dashed"
  >
    <span
      class="text-[10px] text-muted-foreground"
    >
      Szer:
    </span>
    <span
      class="text-xs font-mono font-semibold"
    >
      600
      mm
    </span>
    <span
      class="text-muted-foreground/30"
    >
      |
    </span>
    <span
      class="text-[10px] text-muted-foreground"
    >
      Wys:
    </span>
    <span
      class="text-xs font-mono font-semibold"
    >
      720
      mm
    </span>
  </div>
  <div
    class="flex-1 flex justify-center items-center gap-3 py-2 min-h-0"
  >
    <div
      class="border-4 border-muted-foreground/40 rounded-md bg-background p-1 flex flex-col-reverse gap-0.5 shadow-inner"
      style="min-height: 280px; max-width: 100%;"
    >
      <div
        class="relative rounded transition-all cursor-pointer overflow-hidden flex flex-col border border-purple-300 dark:border-purple-700 hover:border-primary/40 bg-purple-50/30 dark:bg-purple-950/20"
        data-testid="zone-row-2"
        style="flex: 1;"
      >
        <div
          class="absolute inset-1 flex flex-row"
        >
          <div
            class="flex flex-row"
            style="flex: 1;"
          >
            <div
              class="relative rounded transition-all cursor-pointer overflow-hidden flex flex-col border border-muted-foreground/30 hover:border-primary/40 border-dashed bg-background/80"
              data-testid="zone-cell-2-1"
              style="flex: 1;"
            >
              <div
                class="absolute inset-0 flex items-center justify-center pointer-events-none"
              >
                <div
                  class="text-center px-1 py-0.5 rounded bg-background/70"
                >
                  <div
                    class="text-[9px] font-medium text-muted-foreground"
                  >
                    Pusta
                  </div>
                </div>
              </div>
              <div
                class="absolute text-[7px] font-mono bg-background/90 px-0.5 rounded shadow-sm bottom-0.5 left-1/2 -translate-x-1/2"
              >
                <span
                  class="text-muted-foreground"
                >
                  282mm
                </span>
              </div>
            </div>
            <div
              class="flex-shrink-0 w-0.5"
            />
          </div>
          <div
            class="flex flex-row"
            style="flex: 1;"
          >
            <div
              class="relative rounded transition-all cursor-pointer overflow-hidden flex flex-col border border-amber-300 dark:border-amber-700 hover:border-primary/40 bg-background/80"
              data-testid="zone-cell-2-2"
              style="flex: 1;"
            >
              <div
                class="absolute inset-1 pointer-events-none flex flex-col-reverse gap-px"
              >
                <div
                  class="rounded-sm border relative overflow-hidden border-amber-400/80 bg-amber-50/30 dark:bg-amber-900/20"
                  style="flex: 1;"
                >
                  <div
                    class="absolute left-0.5 right-0.5 bottom-0.5 flex flex-col-reverse"
                    style="height: 90%;"
                  >
                    <div
                      class="flex-1 border-t first:border-t-0 border-amber-300/60"
                    />
                  </div>
                  <div
                    class="absolute inset-0 flex items-center justify-center"
                  >
                    <span
                      class="text-[6px] font-medium px-0.5 bg-background/60 rounded text-amber-700 dark:text-amber-300"
                    >
                      F
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="absolute inset-0 flex items-center justify-center pointer-events-none"
              >
                <div
                  class="text-center px-1 py-0.5 rounded bg-background/70"
                >
                  <div
                    class="text-[9px] font-medium text-amber-600 dark:text-amber-400"
                  >
                    Szuflady
                  </div>
                  <div
                    class="text-[8px] text-muted-foreground"
                  >
                    1
                    F/
                    1
                    B
                  </div>
                </div>
              </div>
              <div
                class="absolute text-[7px] font-mono bg-background/90 px-0.5 rounded shadow-sm bottom-0.5 left-1/2 -translate-x-1/2"
              >
                <span
                  class="text-muted-foreground"
                >
                  282mm
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative rounded transition-all cursor-pointer overflow-hidden flex flex-col border border-purple-300 dark:border-purple-700 hover:border-primary/40 bg-purple-50/30 dark:bg-purple-950/20"
        data-testid="zone-row-1"
        style="flex: 1;"
      >
        <div
          class="absolute inset-1 flex flex-row"
        >
          <div
            class="flex flex-row"
            style="flex: 1;"
          >
            <div
              class="relative rounded transition-all cursor-pointer overflow-hidden flex flex-col border border-blue-300 dark:border-blue-700 hover:border-primary/40 bg-background/80"
              data-testid="zone-cell-1-1"
              style="flex: 1;"
            >
              <div
                class="absolute inset-1 pointer-events-none"
              >
                <div
                  class="absolute left-0 h-0.5 bg-blue-400/80 rounded-full w-full"
                  style="bottom: 0%;"
                />
                <div
                  class="absolute left-0 h-0.5 bg-blue-400/80 rounded-full w-full"
                  style="bottom: 50%;"
                />
              </div>
              <div
                class="absolute inset-0 flex items-center justify-center pointer-events-none"
              >
                <div
                  class="text-center px-1 py-0.5 rounded bg-background/70"
                >
                  <div
                    class="text-[9px] font-medium text-blue-600 dark:text-blue-400"
                  >
                    Półki
                  </div>
                  <div
                    class="text-[8px] text-muted-foreground"
                  >
                    2
                    ×
                  </div>
                </div>
              </div>
              <div
                class="absolute text-[7px] font-mono bg-background/90 px-0.5 rounded shadow-sm bottom-0.5 left-1/2 -translate-x-1/2"
              >
                <span
                  class="text-muted-foreground"
                >
                  282mm
                </span>
              </div>
            </div>
            <div
              class="flex-shrink-0 w-0.5"
            />
          </div>
          <div
            class="flex flex-row"
            style="flex: 1;"
          >
            <div
              class="relative rounded transition-all cursor-pointer overflow-hidden flex flex-col border border-muted-foreground/30 hover:border-primary/40 border-dashed bg-background/80"
              data-testid="zone-cell-1-2"
              style="flex: 1;"
            >
              <div
                class="absolute inset-0 flex items-center justify-center pointer-events-none"
              >
                <div
                  class="text-center px-1 py-0.5 rounded bg-background/70"
                >
                  <div
                    class="text-[9px] font-medium text-muted-foreground"
                  >
                    Pusta
                  </div>
                </div>
              </div>
              <div
                class="absolute text-[7px] font-mono bg-background/90 px-0.5 rounded shadow-sm bottom-0.5 left-1/2 -translate-x-1/2"
              >
                <span
                  class="text-muted-foreground"
                >
                  282mm
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col-reverse gap-0.5"
      style="min-height: 280px;"
    >
      <div
        class="flex items-center gap-1"
        style="flex: 1;"
      >
        <div
          class="w-2 h-full flex flex-col"
        >
          <div
            class="w-full h-px bg-muted-foreground/50"
          />
          <div
            class="flex-1 border-l border-muted-foreground/50 ml-0"
          />
          <div
            class="w-full h-px bg-muted-foreground/50"
          />
        </div>
        <div
          class="flex flex-col items-start gap-0.5"
        >
          <span
            class="text-[10px] font-mono whitespace-nowrap text-muted-foreground"
          >
            342
            mm
          </span>
          <div
            class="flex gap-0.5 transition-opacity opacity-0 group-hover:opacity-100"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-4 w-4 rounded"
              title="Przesuń niżej"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down h-2.5 w-2.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-1"
        style="flex: 1;"
      >
        <div
          class="w-2 h-full flex flex-col"
        >
          <div
            class="w-full h-px bg-muted-foreground/50"
          />
          <div
            class="flex-1 border-l border-muted-foreground/50 ml-0"
          />
          <div
            class="w-full h-px bg-muted-foreground/50"
          />
        </div>
        <div
          class="flex flex-col items-start gap-0.5"
        >
          <span
            class="text-[10px] font-mono whitespace-nowrap text-muted-foreground"
          >
            342
            mm
          </span>
          <div
            class="flex gap-0.5 transition-opacity opacity-0 group-hover:opacity-100"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-4 w-4 rounded"
              title="Przesuń wyżej"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-up h-2.5 w-2.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m18 15-6-6-6 6"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="text-center mt-2 pt-2 border-t border-dashed"
  >
    <div
      class="text-[10px] text-muted-foreground"
    >
      Wnętrze: 
      564
      ×
      684
      mm
    </div>
  </div>
</div>
`;

exports[`VIS-004: ZoneEditor SHELVES controls renders SHELVES zone editor with all controls 1`] = `
<div
  class="border rounded-lg p-5 space-y-5 bg-card shadow-sm"
>
  <div
    class="flex items-center justify-between pb-3 border-b"
  >
    <h4
      class="font-semibold text-sm"
    >
      Edycja sekcji
    </h4>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-8 w-8 text-destructive hover:text-destructive hover:bg-destructive/10"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 11v6"
        />
        <path
          d="M14 11v6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
        />
        <path
          d="M3 6h18"
        />
        <path
          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
      </svg>
    </button>
  </div>
  <div
    class="space-y-3"
  >
    <label
      class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium"
    >
      Zawartość sekcji
    </label>
    <div
      class="grid gap-2 grid-cols-4"
    >
      <button
        class="items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground px-4 h-auto py-2 flex flex-col gap-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-box h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"
          />
          <path
            d="m3.3 7 8.7 5 8.7-5"
          />
          <path
            d="M12 22V12"
          />
        </svg>
        <span
          class="text-xs"
        >
          Pusta
        </span>
      </button>
      <button
        class="items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 px-4 h-auto py-2 flex flex-col gap-1 ring-2 ring-primary/20"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
        <span
          class="text-xs"
        >
          Półki
        </span>
      </button>
      <button
        class="items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground px-4 h-auto py-2 flex flex-col gap-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-package h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
          />
          <path
            d="M12 22V12"
          />
          <polyline
            points="3.29 7 12 12 20.71 7"
          />
          <path
            d="m7.5 4.27 9 5.15"
          />
        </svg>
        <span
          class="text-xs"
        >
          Szuflady
        </span>
      </button>
      <button
        class="items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground px-4 h-auto py-2 flex flex-col gap-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-grid3x3 lucide-grid-3x3 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M3 9h18"
          />
          <path
            d="M3 15h18"
          />
          <path
            d="M9 3v18"
          />
          <path
            d="M15 3v18"
          />
        </svg>
        <span
          class="text-xs"
        >
          Podział
        </span>
      </button>
    </div>
  </div>
  <div
    class="space-y-4 pt-3 border-t"
  >
    <h5
      class="text-sm font-medium text-blue-600 dark:text-blue-400 flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-layers h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
        />
        <path
          d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
        />
        <path
          d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
        />
      </svg>
      Konfiguracja półek
    </h5>
    <div
      class="space-y-2"
    >
      <label
        class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm"
      >
        Tryb
      </label>
      <div
        class="grid gap-2 grid-cols-2"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 px-4 h-auto py-2 ring-2 ring-primary/20"
          type="button"
        >
          <span
            class="text-sm"
          >
            Jednolita głębokość
          </span>
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground px-4 h-auto py-2"
          type="button"
        >
          <span
            class="text-sm"
          >
            Różne głębokości
          </span>
        </button>
      </div>
    </div>
    <div
      class="flex items-center justify-between"
    >
      <label
        class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm"
      >
        Ilość półek
      </label>
      <div
        class="flex items-center gap-1 border rounded-md"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-8 w-8 rounded-none border-r"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-minus h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
          </svg>
        </button>
        <span
          class="w-10 text-center text-sm font-medium"
        >
          3
        </span>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-8 w-8 rounded-none border-l"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="space-y-2"
    >
      <label
        class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm"
      >
        Materiał półek
      </label>
      <button
        aria-autocomplete="none"
        aria-controls="radix-_r_0_"
        aria-expanded="false"
        class="flex w-full items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 h-9"
        data-state="closed"
        dir="ltr"
        role="combobox"
        type="button"
      >
        <span
          style="pointer-events: none;"
        >
          <div
            class="flex items-center gap-2"
          >
            <div
              class="w-3 h-3 rounded-sm border"
              style="background-color: rgb(255, 255, 255);"
            />
            <span>
              Biała płyta 18mm
            </span>
            <span
              class="text-muted-foreground text-xs"
            >
              (
              18
              mm)
            </span>
            <span
              class="text-xs text-blue-600"
            >
              (korpus)
            </span>
          </div>
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-4 w-4 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="space-y-2"
    >
      <label
        class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm"
      >
        Głębokość półek
      </label>
      <div
        class="grid gap-2 grid-cols-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 px-4 h-auto py-2 ring-2 ring-primary/20"
          type="button"
        >
          <span
            class="text-sm"
          >
            Pełna
          </span>
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground px-4 h-auto py-2"
          type="button"
        >
          <span
            class="text-sm"
          >
            Połowa
          </span>
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground px-4 h-auto py-2"
          type="button"
        >
          <span
            class="text-sm"
          >
            Własna
          </span>
        </button>
      </div>
    </div>
    <div
      class="text-xs text-muted-foreground bg-muted/30 p-2 rounded"
    >
      Rzeczywista głębokość:
       
      <span
        class="font-mono font-medium text-foreground"
      >
        550
        mm
      </span>
    </div>
    <div
      class="text-xs text-blue-600 dark:text-blue-400 bg-blue-50 dark:bg-blue-950/20 p-2 rounded"
    >
      Pierwsza półka na dole sekcji, kolejne rozmieszczone proporcjonalnie do góry.
    </div>
  </div>
</div>
`;

exports[`VIS-005: ZoneEditor DRAWERS controls renders DRAWERS zone editor with all controls 1`] = `
<div
  class="border rounded-lg p-5 space-y-5 bg-card shadow-sm"
>
  <div
    class="flex items-center justify-between pb-3 border-b"
  >
    <h4
      class="font-semibold text-sm"
    >
      Edycja sekcji
    </h4>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-8 w-8 text-destructive hover:text-destructive hover:bg-destructive/10"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 11v6"
        />
        <path
          d="M14 11v6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
        />
        <path
          d="M3 6h18"
        />
        <path
          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
      </svg>
    </button>
  </div>
  <div
    class="space-y-3"
  >
    <label
      class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium"
    >
      Zawartość sekcji
    </label>
    <div
      class="grid gap-2 grid-cols-4"
    >
      <button
        class="items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground px-4 h-auto py-2 flex flex-col gap-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-box h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"
          />
          <path
            d="m3.3 7 8.7 5 8.7-5"
          />
          <path
            d="M12 22V12"
          />
        </svg>
        <span
          class="text-xs"
        >
          Pusta
        </span>
      </button>
      <button
        class="items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground px-4 h-auto py-2 flex flex-col gap-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
        <span
          class="text-xs"
        >
          Półki
        </span>
      </button>
      <button
        class="items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 px-4 h-auto py-2 flex flex-col gap-1 ring-2 ring-primary/20"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-package h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
          />
          <path
            d="M12 22V12"
          />
          <polyline
            points="3.29 7 12 12 20.71 7"
          />
          <path
            d="m7.5 4.27 9 5.15"
          />
        </svg>
        <span
          class="text-xs"
        >
          Szuflady
        </span>
      </button>
      <button
        class="items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground px-4 h-auto py-2 flex flex-col gap-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-grid3x3 lucide-grid-3x3 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M3 9h18"
          />
          <path
            d="M3 15h18"
          />
          <path
            d="M9 3v18"
          />
          <path
            d="M15 3v18"
          />
        </svg>
        <span
          class="text-xs"
        >
          Podział
        </span>
      </button>
    </div>
  </div>
  <div
    class="space-y-4 pt-3 border-t"
  >
    <h5
      class="text-sm font-medium text-amber-600 dark:text-amber-400 flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-package h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
        />
        <path
          d="M12 22V12"
        />
        <polyline
          points="3.29 7 12 12 20.71 7"
        />
        <path
          d="m7.5 4.27 9 5.15"
        />
      </svg>
      Konfiguracja szuflad
    </h5>
    <div
      class="space-y-2"
    >
      <label
        class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-muted-foreground"
      >
        Szybkie szablony
      </label>
      <div
        class="flex flex-wrap gap-1"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground rounded-md text-xs h-7 px-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-layout-template h-3 w-3 mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="7"
              rx="1"
              width="18"
              x="3"
              y="3"
            />
            <rect
              height="7"
              rx="1"
              width="9"
              x="3"
              y="14"
            />
            <rect
              height="7"
              rx="1"
              width="5"
              x="16"
              y="14"
            />
          </svg>
          1
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground rounded-md text-xs h-7 px-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-layout-template h-3 w-3 mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="7"
              rx="1"
              width="18"
              x="3"
              y="3"
            />
            <rect
              height="7"
              rx="1"
              width="9"
              x="3"
              y="14"
            />
            <rect
              height="7"
              rx="1"
              width="5"
              x="16"
              y="14"
            />
          </svg>
          3
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground rounded-md text-xs h-7 px-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-layout-template h-3 w-3 mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="7"
              rx="1"
              width="18"
              x="3"
              y="3"
            />
            <rect
              height="7"
              rx="1"
              width="9"
              x="3"
              y="14"
            />
            <rect
              height="7"
              rx="1"
              width="5"
              x="16"
              y="14"
            />
          </svg>
          Mieszane
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground rounded-md text-xs h-7 px-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-layout-template h-3 w-3 mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="7"
              rx="1"
              width="18"
              x="3"
              y="3"
            />
            <rect
              height="7"
              rx="1"
              width="9"
              x="3"
              y="14"
            />
            <rect
              height="7"
              rx="1"
              width="5"
              x="16"
              y="14"
            />
          </svg>
          3
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground rounded-md text-xs h-7 px-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-layout-template h-3 w-3 mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="7"
              rx="1"
              width="18"
              x="3"
              y="3"
            />
            <rect
              height="7"
              rx="1"
              width="9"
              x="3"
              y="14"
            />
            <rect
              height="7"
              rx="1"
              width="5"
              x="16"
              y="14"
            />
          </svg>
          4
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground rounded-md text-xs h-7 px-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-layout-template h-3 w-3 mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="7"
              rx="1"
              width="18"
              x="3"
              y="3"
            />
            <rect
              height="7"
              rx="1"
              width="9"
              x="3"
              y="14"
            />
            <rect
              height="7"
              rx="1"
              width="5"
              x="16"
              y="14"
            />
          </svg>
          2
        </button>
      </div>
    </div>
    <div
      class="grid grid-cols-2 gap-3"
    >
      <div>
        <label
          class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-muted-foreground mb-2 block"
        >
          Podgląd stref 
          <span
            class="font-mono"
          >
            (od dołu)
          </span>
        </label>
        <div
          class="border rounded-lg bg-muted/20 p-3"
        >
          <div
            class="text-center mb-2 pb-2 border-b border-dashed"
          >
            <div
              class="text-[10px] text-muted-foreground"
            >
              Szerokość szuflad
            </div>
            <div
              class="text-xs font-mono font-semibold"
            >
              NaN
               mm
            </div>
          </div>
          <div
            class="h-[180px] flex flex-col gap-0.5 w-full max-w-[160px] mx-auto relative pl-7 pr-6"
          >
            <div
              class="relative rounded border-2 transition-all cursor-pointer overflow-visible border-border hover:border-primary/50 bg-background"
              style="flex: 1;"
            >
              <div
                class="absolute left-1 right-1 border border-dashed rounded-sm pointer-events-none border-amber-400/60 bg-amber-50/20 dark:bg-amber-950/20"
                style="bottom: 4px; height: calc(100% - 8px);"
              >
                <div
                  class="absolute inset-0 flex flex-col-reverse"
                >
                  <div
                    class="flex-shrink-0 relative"
                    style="height: 100%;"
                  >
                    <div
                      class="absolute right-0.5 top-1/2 -translate-y-1/2 text-[7px] font-mono whitespace-nowrap text-amber-600/80 dark:text-amber-400/80"
                      style="writing-mode: vertical-rl; text-orientation: mixed;"
                    >
                      360
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="absolute inset-0 flex items-center justify-center pointer-events-none"
              >
                <div
                  class="text-[10px] font-medium truncate px-1 flex items-center gap-0.5"
                >
                  F
                </div>
              </div>
              <div
                class="absolute -right-5 top-1/2 -translate-y-1/2 text-[8px] font-mono whitespace-nowrap text-primary/70"
                style="writing-mode: vertical-rl; text-orientation: mixed;"
                title="Front: 360mm"
              >
                360
              </div>
            </div>
            <div
              class="relative rounded border-2 transition-all cursor-pointer overflow-visible border-primary bg-primary/5 ring-2 ring-primary/20 z-10"
              style="flex: 1;"
            >
              <div
                class="absolute left-1 right-1 border border-dashed rounded-sm pointer-events-none border-amber-400/60 bg-amber-50/20 dark:bg-amber-950/20"
                style="bottom: 4px; height: calc(100% - 8px);"
              >
                <div
                  class="absolute inset-0 flex flex-col-reverse"
                >
                  <div
                    class="flex-shrink-0 relative"
                    style="height: 100%;"
                  >
                    <div
                      class="absolute right-0.5 top-1/2 -translate-y-1/2 text-[7px] font-mono whitespace-nowrap text-amber-600/80 dark:text-amber-400/80"
                      style="writing-mode: vertical-rl; text-orientation: mixed;"
                    >
                      360
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="absolute inset-0 flex items-center justify-center pointer-events-none"
              >
                <div
                  class="text-[10px] font-medium truncate px-1 flex items-center gap-0.5"
                >
                  F
                </div>
              </div>
              <div
                class="absolute -right-5 top-1/2 -translate-y-1/2 text-[8px] font-mono whitespace-nowrap text-primary/70"
                style="writing-mode: vertical-rl; text-orientation: mixed;"
                title="Front: 360mm"
              >
                360
              </div>
              <div
                class="absolute -left-6 top-1/2 -translate-y-1/2 flex flex-col gap-0.5"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-5 w-5 rounded-full"
                  title="Przesuń wyżej"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-up h-2.5 w-2.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m18 15-6-6-6 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="text-center mt-2 pt-2 border-t border-dashed"
          >
            <div
              class="text-[10px] text-muted-foreground"
            >
              Wysokość sekcji
            </div>
            <div
              class="text-xs font-mono font-semibold"
            >
              720
               mm
            </div>
          </div>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground rounded-md px-3 w-full mt-2 border-dashed text-xs h-7"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus h-3 w-3 mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Dodaj strefę
        </button>
      </div>
      <div>
        <label
          class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-muted-foreground mb-2 block"
        >
          Edycja strefy
        </label>
        <div
          class="border rounded-md p-3 space-y-3 bg-background"
        >
          <div
            class="flex items-center justify-between"
          >
            <h6
              class="text-xs font-medium text-muted-foreground"
            >
              Strefa 
              1
               
              <span
                class="font-mono"
              >
                (
                360
                mm)
              </span>
            </h6>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent h-6 w-6 text-destructive hover:text-destructive"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-trash2 lucide-trash-2 h-3 w-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 11v6"
                />
                <path
                  d="M14 11v6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                />
                <path
                  d="M3 6h18"
                />
                <path
                  d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
            </button>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center justify-between"
            >
              <label
                class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs"
              >
                Wysokość frontu
              </label>
              <span
                class="text-xs font-mono bg-muted px-1.5 py-0.5 rounded"
              >
                1
                x
              </span>
            </div>
            <span
              aria-disabled="false"
              class="relative flex w-full touch-none select-none items-center"
              data-orientation="horizontal"
              dir="ltr"
              style="--radix-slider-thumb-transform: translateX(-50%);"
            >
              <span
                class="relative h-2 w-full grow overflow-hidden rounded-full bg-secondary"
                data-orientation="horizontal"
              >
                <span
                  class="absolute h-full bg-primary"
                  data-orientation="horizontal"
                  style="left: 0%; right: 100%;"
                />
              </span>
              <span
                style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
              >
                <span
                  aria-orientation="horizontal"
                  aria-valuemax="4"
                  aria-valuemin="1"
                  aria-valuenow="1"
                  class="block h-5 w-5 rounded-full border-2 border-primary bg-background ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  role="slider"
                  style=""
                  tabindex="0"
                />
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between py-2 px-2 border rounded bg-muted/10"
          >
            <div>
              <label
                class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs font-medium cursor-pointer"
                for="front-dz-1"
              >
                Front zewnętrzny
              </label>
              <p
                class="text-[10px] text-muted-foreground"
              >
                Widoczny
              </p>
            </div>
            <button
              aria-checked="true"
              class="peer inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
              data-state="checked"
              id="front-dz-1"
              role="switch"
              type="button"
              value="on"
            >
              <span
                class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0"
                data-state="checked"
              />
            </button>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center justify-between"
            >
              <label
                class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs"
              >
                Wysokość szuflady vs frontu
              </label>
              <span
                class="text-xs font-mono bg-muted px-1.5 py-0.5 rounded"
              >
                100
                % (
                360
                mm)
              </span>
            </div>
            <span
              aria-disabled="false"
              class="relative flex w-full touch-none select-none items-center"
              data-orientation="horizontal"
              dir="ltr"
              style="--radix-slider-thumb-transform: translateX(-50%);"
            >
              <span
                class="relative h-2 w-full grow overflow-hidden rounded-full bg-secondary"
                data-orientation="horizontal"
              >
                <span
                  class="absolute h-full bg-primary"
                  data-orientation="horizontal"
                  style="left: 0%; right: 0%;"
                />
              </span>
              <span
                style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(100% + 0px);"
              >
                <span
                  aria-orientation="horizontal"
                  aria-valuemax="100"
                  aria-valuemin="10"
                  aria-valuenow="100"
                  class="block h-5 w-5 rounded-full border-2 border-primary bg-background ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50"
                  data-orientation="horizontal"
                  data-radix-collection-item=""
                  role="slider"
                  style=""
                  tabindex="0"
                />
              </span>
            </span>
            <p
              class="text-[9px] text-muted-foreground"
            >
              Szuflada zajmuje pełną wysokość frontu
            </p>
          </div>
          <div
            class="space-y-2 pt-2 border-t border-dashed"
          >
            <div
              class="flex items-center justify-between"
            >
              <div>
                <label
                  class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs font-medium"
                >
                  Półki nad szufladą
                </label>
                <p
                  class="text-[9px] text-blue-600 dark:text-blue-400"
                >
                  Zmniejsz wysokość szuflady aby dodać półki
                </p>
              </div>
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground rounded-md h-6 text-[10px] px-2"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-layers h-3 w-3 mr-1"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
                  />
                  <path
                    d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
                  />
                  <path
                    d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
                  />
                </svg>
                Włącz
              </button>
            </div>
          </div>
          <div
            class="flex items-center justify-between"
          >
            <label
              class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs"
            >
              Szuflady w strefie
            </label>
            <div
              class="flex items-center gap-0.5 border rounded"
            >
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-6 w-6 rounded-none"
                disabled=""
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-minus h-2.5 w-2.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                </svg>
              </button>
              <span
                class="w-6 text-center text-xs font-medium"
              >
                1
              </span>
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-6 w-6 rounded-none"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus h-2.5 w-2.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-2 bg-muted/10 p-3 rounded-lg border"
    >
      <label
        class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm"
      >
        System prowadnic
      </label>
      <button
        aria-autocomplete="none"
        aria-controls="radix-_r_9_"
        aria-expanded="false"
        class="flex items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-full h-9"
        data-state="closed"
        dir="ltr"
        role="combobox"
        type="button"
      >
        <span
          style="pointer-events: none;"
        >
          Boczne (13mm)
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-4 w-4 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
      <p
        class="text-xs text-muted-foreground flex items-center gap-2"
      >
        <span
          class="inline-block w-1.5 h-1.5 rounded-full bg-blue-500"
        />
        Luz boczny: 
        13
        mm/stronę
      </p>
    </div>
    <div
      class="space-y-3 bg-muted/10 p-3 rounded-lg border"
    >
      <label
        class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium"
      >
        Materiały szuflady
      </label>
      <div
        class="space-y-1.5"
      >
        <label
          class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-muted-foreground"
        >
          Box (boki, tył, przód)
        </label>
        <button
          aria-autocomplete="none"
          aria-controls="radix-_r_a_"
          aria-expanded="false"
          class="flex w-full items-center justify-between rounded-md border border-input bg-background px-3 py-2 ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 h-8 text-xs"
          data-state="closed"
          dir="ltr"
          role="combobox"
          type="button"
        >
          <span
            style="pointer-events: none;"
          >
            <div
              class="flex items-center gap-2"
            >
              <div
                class="w-3 h-3 rounded-sm border"
                style="background-color: rgb(255, 255, 255);"
              />
              <span>
                Biała płyta 18mm
              </span>
              <span
                class="text-muted-foreground text-xs"
              >
                (
                18
                mm)
              </span>
              <span
                class="text-xs text-blue-600"
              >
                (korpus)
              </span>
            </div>
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
      <div
        class="space-y-1.5"
      >
        <label
          class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-muted-foreground"
        >
          Dno szuflady
        </label>
        <button
          aria-autocomplete="none"
          aria-controls="radix-_r_b_"
          aria-expanded="false"
          class="flex w-full items-center justify-between rounded-md border border-input bg-background px-3 py-2 ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 h-8 text-xs"
          data-state="closed"
          dir="ltr"
          role="combobox"
          type="button"
        >
          <span
            style="pointer-events: none;"
          >
            <div
              class="flex items-center gap-2"
            >
              <div
                class="w-3 h-3 rounded-sm border"
                style="background-color: rgb(255, 255, 255);"
              />
              <span>
                Biała płyta 18mm
              </span>
              <span
                class="text-muted-foreground text-xs"
              >
                (
                18
                mm)
              </span>
            </div>
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="text-xs text-muted-foreground bg-muted/30 p-2 rounded flex justify-between"
    >
      <span>
        2
         frontów • 
        2
         szuflad
      </span>
      <span
        class="font-mono"
      >
        NaN
         mm szer.
      </span>
    </div>
    <div
      class="text-xs text-amber-600 dark:text-amber-400 bg-amber-50 dark:bg-amber-950/20 p-2 rounded"
    >
      Pierwsza strefa (szuflada) na dole sekcji, kolejne układane do góry.
    </div>
  </div>
</div>
`;

exports[`Visual: Selection states renders aspect ratio correctly for tall cabinet 1`] = `
<div
  class="border rounded-lg bg-muted/10 p-3 flex flex-col h-full"
  data-testid="interior-preview"
>
  <div
    class="flex items-center justify-center gap-2 mb-2 pb-2 border-b border-dashed"
  >
    <span
      class="text-[10px] text-muted-foreground"
    >
      Szer:
    </span>
    <span
      class="text-xs font-mono font-semibold"
    >
      400
      mm
    </span>
    <span
      class="text-muted-foreground/30"
    >
      |
    </span>
    <span
      class="text-[10px] text-muted-foreground"
    >
      Wys:
    </span>
    <span
      class="text-xs font-mono font-semibold"
    >
      900
      mm
    </span>
  </div>
  <div
    class="flex-1 flex justify-center items-center gap-3 py-2 min-h-0"
  >
    <div
      class="border-4 border-muted-foreground/40 rounded-md bg-background p-1 flex flex-col-reverse gap-0.5 shadow-inner"
      style="min-height: 280px; max-width: 100%;"
    >
      <div
        class="relative rounded transition-all cursor-pointer overflow-hidden flex flex-col border border-blue-300 dark:border-blue-700 hover:border-primary/40 bg-blue-50/50 dark:bg-blue-950/20"
        data-testid="zone-shelves-zone"
        style="flex: 1;"
      >
        <div
          class="absolute inset-1 pointer-events-none"
        >
          <div
            class="absolute left-0 h-0.5 bg-blue-400/80 rounded-full w-full"
            style="bottom: 0%;"
          />
          <div
            class="absolute left-0 h-0.5 bg-blue-400/80 rounded-full w-full"
            style="bottom: 33.33333333333333%;"
          />
          <div
            class="absolute left-0 h-0.5 bg-blue-400/80 rounded-full w-full"
            style="bottom: 66.66666666666666%;"
          />
        </div>
        <div
          class="absolute inset-0 flex items-center justify-center pointer-events-none"
        >
          <div
            class="text-center px-1 py-0.5 rounded bg-background/70"
          >
            <div
              class="text-[9px] font-medium text-blue-600 dark:text-blue-400"
            >
              Półki
            </div>
            <div
              class="text-[8px] text-muted-foreground"
            >
              3
              ×
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col-reverse gap-0.5"
      style="min-height: 280px;"
    >
      <div
        class="flex items-center gap-1"
        style="flex: 1;"
      >
        <div
          class="w-2 h-full flex flex-col"
        >
          <div
            class="w-full h-px bg-muted-foreground/50"
          />
          <div
            class="flex-1 border-l border-muted-foreground/50 ml-0"
          />
          <div
            class="w-full h-px bg-muted-foreground/50"
          />
        </div>
        <div
          class="flex flex-col items-start gap-0.5"
        >
          <span
            class="text-[10px] font-mono whitespace-nowrap text-muted-foreground"
          >
            864
            mm
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="text-center mt-2 pt-2 border-t border-dashed"
  >
    <div
      class="text-[10px] text-muted-foreground"
    >
      Wnętrze: 
      364
      ×
      864
      mm
    </div>
  </div>
</div>
`;

exports[`Visual: Selection states renders aspect ratio correctly for wide cabinet 1`] = `
<div
  class="border rounded-lg bg-muted/10 p-3 flex flex-col h-full"
  data-testid="interior-preview"
>
  <div
    class="flex items-center justify-center gap-2 mb-2 pb-2 border-b border-dashed"
  >
    <span
      class="text-[10px] text-muted-foreground"
    >
      Szer:
    </span>
    <span
      class="text-xs font-mono font-semibold"
    >
      800
      mm
    </span>
    <span
      class="text-muted-foreground/30"
    >
      |
    </span>
    <span
      class="text-[10px] text-muted-foreground"
    >
      Wys:
    </span>
    <span
      class="text-xs font-mono font-semibold"
    >
      600
      mm
    </span>
  </div>
  <div
    class="flex-1 flex justify-center items-center gap-3 py-2 min-h-0"
  >
    <div
      class="border-4 border-muted-foreground/40 rounded-md bg-background p-1 flex flex-col-reverse gap-0.5 shadow-inner"
      style="min-height: 280px; max-width: 100%;"
    >
      <div
        class="relative rounded transition-all cursor-pointer overflow-hidden flex flex-col border border-blue-300 dark:border-blue-700 hover:border-primary/40 bg-blue-50/50 dark:bg-blue-950/20"
        data-testid="zone-shelves-zone"
        style="flex: 1;"
      >
        <div
          class="absolute inset-1 pointer-events-none"
        >
          <div
            class="absolute left-0 h-0.5 bg-blue-400/80 rounded-full w-full"
            style="bottom: 0%;"
          />
          <div
            class="absolute left-0 h-0.5 bg-blue-400/80 rounded-full w-full"
            style="bottom: 33.33333333333333%;"
          />
          <div
            class="absolute left-0 h-0.5 bg-blue-400/80 rounded-full w-full"
            style="bottom: 66.66666666666666%;"
          />
        </div>
        <div
          class="absolute inset-0 flex items-center justify-center pointer-events-none"
        >
          <div
            class="text-center px-1 py-0.5 rounded bg-background/70"
          >
            <div
              class="text-[9px] font-medium text-blue-600 dark:text-blue-400"
            >
              Półki
            </div>
            <div
              class="text-[8px] text-muted-foreground"
            >
              3
              ×
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col-reverse gap-0.5"
      style="min-height: 280px;"
    >
      <div
        class="flex items-center gap-1"
        style="flex: 1;"
      >
        <div
          class="w-2 h-full flex flex-col"
        >
          <div
            class="w-full h-px bg-muted-foreground/50"
          />
          <div
            class="flex-1 border-l border-muted-foreground/50 ml-0"
          />
          <div
            class="w-full h-px bg-muted-foreground/50"
          />
        </div>
        <div
          class="flex flex-col items-start gap-0.5"
        >
          <span
            class="text-[10px] font-mono whitespace-nowrap text-muted-foreground"
          >
            564
            mm
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="text-center mt-2 pt-2 border-t border-dashed"
  >
    <div
      class="text-[10px] text-muted-foreground"
    >
      Wnętrze: 
      764
      ×
      564
      mm
    </div>
  </div>
</div>
`;
